--- a/main.css
+++ b/main.css
@@ -7,8 +7,12 @@
     background-color: blueviolet;
 }
 .panel2{
+    display: flex;
+    align-items: top;
+    padding-top:100px ;
+    justify-content: space-evenly;
     width: 100%;
-    height: 300px;
+    height: 1000px;
     background-color: blue;
 }
 .panel3{
@@ -25,6 +29,12 @@
 }
 .cuadro2{
     background-color: brown;
+    width: 100px;
+    height: 100px;
+    border-radius: 10%;
+}
+.cuadrop2{
+    background-color: blueviolet;
     width: 100px;
     height: 100px;
     border-radius: 10%;
